Transitional support for open modules